--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "bootstrap-arrow-buttons": "^1.0.4",
+    "final-form": "^4.10.0",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-beautiful-dnd": "^9.0.1",
@@ -13,6 +14,7 @@
     "react-checkbox-group": "^4.0.1",
     "react-checkbox-list": "0.0.2",
     "react-dom": "^16.4.2",
+    "react-final-form": "^3.6.5",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4"
   },
