--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-checkbox-list": "0.0.2",
     "react-dom": "^16.4.2",
     "react-final-form": "^3.6.5",
+    "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4"
   },
