--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-final-form": "^3.6.5",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "react-sortable-hoc": "^0.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
