--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "bootstrap-arrow-buttons": "^1.0.4",
+    "canvas": "^2.0.1",
     "final-form": "^4.10.0",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
