--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
-    "react-sortable-hoc": "^0.8.3"
+    "react-sortable-hoc": "^0.8.3",
+    "react-table": "^6.8.6"
   },
   "scripts": {
     "start": "react-scripts start",
