--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^4.1.3",
     "bootstrap-arrow-buttons": "^1.0.4",
     "canvas": "^2.0.1",
+    "dotenv": "^8.0.0",
     "final-form": "^4.10.0",
     "fuse.js": "^3.4.4",
     "prop-types": "^15.6.2",
